[workspace]
resolver = "2"
members = [
    ".",
    "crates/nexus_core",
    "crates/nexus_network",
    "crates/nexus_display",
    "crates/nexus_input",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
arboard = "3.2"
base64 = "0.22"
bincode = "1.3"
bytes = { version = "1.5", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.24", features = ["default"] }
hex = "0.4"
image = "0.25"
minifb = "0.27"
quinn = "0.10"
qrcode-generator = "4.1"
rand = "0.8"
rcgen = "0.12"
rfd = "0.12"
rqrr = "0.7"
rustls = { version = "0.21", features = ["dangerous_configuration", "quic"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[package]
name = "nexus-p2p"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
arboard.workspace = true
base64.workspace = true
bincode.workspace = true
eframe.workspace = true
image.workspace = true
quinn.workspace = true
qrcode-generator.workspace = true
rfd.workspace = true
rqrr.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nexus_core = { path = "crates/nexus_core" }
nexus_display = { path = "crates/nexus_display" }
nexus_input = { path = "crates/nexus_input" }
nexus_network = { path = "crates/nexus_network" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"